s06-appprotect-api/httpbin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-policy: default/appolicy-api
    appprotect.f5.com/app-protect-security-log: default/logconf
    appprotect.f5.com/app-protect-security-log-destination: syslog:server=10.1.1.5:5144
    appprotect.f5.com/app-protect-security-log-enable: "True"
    kubernetes.io/ingress.class: nginx
  name: httpbin-ingress
spec:
  rules:
  - host: httpbin.example.com
    http:
      paths:
      - backend:
          serviceName: httpbin-svc
          servicePort: 80
